[package]
name = "sql-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.24", features = ["serde"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
uuid = { version = "1.3.0", features = ["v4"] }
